# Java-Compiler

./: CMakeLists.txt  README.md  grammar_input.txt  main.cpp  output of test from sheet 2 question 5.txt
lexical_analyzer/: DFA.cpp  DFA.h  DFA_Minimized.cpp  DFA_Minimized.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LexicalAnalyzerTest.cpp  NFA.cpp  NFA.h
lexical_analyzer_generator/: LexicalAnalyzer.h  NFA.h
parser_generator/: FF_Generator.cpp  FF_Generator.h  GrammarParser.cpp  GrammarParser.h  LLOneGrammarGenerator.cpp  LLOneGrammarGenerator.h  Parser.cpp  Parser.h
utils/: GrammarIO.cpp  GrammarIO.h  NfaGraph.cpp  NfaGraph.h  NfaNode.cpp  NfaNode.h  TransitionTable.cpp  TransitionTable.h
